# VizForge

./: .gitignore  ARCHITECTURE_V2.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  NLQ_ENGINE_COMPLETE.md  PHASE_9_COMPLETE.md  PREDICTIVE_ANALYTICS_COMPLETE.md  PYPI_UPLOAD_INSTRUCTIONS.md  README.md  README_v1.1.0.md  ROADMAP_v2.0.md  VISUAL_DESIGNER_COMPLETE.md  VIZFORGE_COMPLETE_GUIDE.md  pyproject.toml  test_basic.py  test_v02.py  test_v2_0_1.py
.github/workflows/: publish.yml.disabled
examples/: 3d_visualizations.py  chart_recommender_demo.py  connectors_demo.py  insights_advanced_demo.py  interactive_dashboard.py  nlq_demo.py  pattern_detection_demo.py  predictive_demo.py  smart_charts.py  storytelling_demo.py  v1_migration.py  video_export_demo.py  visual_designer_demo.py
vizforge/: __init__.py  config.py  version.py
vizforge/analytics/: __init__.py  aggregations.py  calculated_fields.py  hierarchies.py  parameters.py
vizforge/animations/: __init__.py  easing.py  gestures.py  transitions.py
vizforge/charts/: __init__.py  area.py  bar.py  boxplot.py  bubble.py  funnel.py  heatmap.py  histogram.py  line.py  pie.py  radar.py  scatter.py  waterfall.py
vizforge/charts/2d/: __init__.py  area.py  boxplot.py  bubble.py  funnel.py  heatmap.py  histogram.py  radar.py  waterfall.py
vizforge/charts/advanced/: __init__.py  contour.py  parallel.py  sunburst.py  treemap.py
vizforge/charts/geo/: __init__.py  choropleth.py  densitygeo.py  flowmap.py  linegeo.py  scattergeo.py
vizforge/charts/network/: __init__.py  dendrogram.py  graph.py  sankey.py  tree.py
vizforge/charts/realtime/: __init__.py  animated.py  streaming.py
vizforge/charts/stats/: __init__.py  correlation.py  feature_importance.py  kde.py  regression.py  roc.py  violin.py
vizforge/charts/threed/: __init__.py  cone.py  isosurface.py  mesh3d.py  scatter3d.py  surface.py  volume.py
vizforge/charts3d/: __init__.py  controls.py  geometric.py  scientific.py  surface.py
vizforge/connectors/: __init__.py  api.py  base.py  cloud.py  connector_factory.py  database.py  file.py  web.py
vizforge/core/: __init__.py  accessibility.py  base.py  cache.py  collaboration.py  engine.py  export.py  interactivity.py  performance.py  plugins.py  streaming.py  theme.py  webgpu.py
vizforge/dashboard/: __init__.py  builder.py  components.py  dashboard.py  layout.py  templates.py
vizforge/examples/: basic_examples.py
vizforge/insights/: __init__.py  provenance.py
vizforge/intelligence/: __init__.py  bias_detector.py  chart_recommender_v2.py  chart_selector.py  color_optimizer.py  data_profiler.py  insights_advanced.py  insights_engine.py  pattern_detector.py  reasoning.py  recommendation.py
vizforge/interactive/: __init__.py  actions.py  callbacks.py  filters.py  state.py  widgets.py
vizforge/nlq/: __init__.py  engine.py  entity_extractor.py  query_parser.py
vizforge/predictive/: __init__.py  anomaly_detector.py  forecaster.py  seasonality.py  trend_detector.py
vizforge/storytelling/: __init__.py  insight_discovery.py  narrative_generator.py  report_generator.py
vizforge/synthetic/: __init__.py  generator.py
vizforge/testing/: __init__.py  test_analytics.py  test_animations.py  test_intelligence.py  test_interactive.py  test_performance.py
vizforge/utils/: __init__.py  colors.py  data.py
vizforge/video_export/: __init__.py  animation_engine.py  frame_generator.py  video_exporter.py
vizforge/visual_designer/: __init__.py  chart_config.py  code_generator.py  designer_app.py
vizforge/visual_designer/static/: designer.css  designer.js
