[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vizforge"
version = "0.5.1"
description = "Production-grade data visualization library with zero AI dependencies"
readme = "README.md"
authors = [
    { name = "Teyfik OZ", email = "teyfikoz@example.com" }
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["visualization", "plotting", "charts", "graphs", "data-viz"]
requires-python = ">=3.10"
dependencies = [
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
geo = [
    "folium>=0.15.0",
    "geopandas>=0.14.0",
]
stats = [
    "scipy>=1.10.0",
    "seaborn>=0.13.0",
]
network = [
    "networkx>=3.0",
    "pyvis>=0.3.0",
]
export = [
    "kaleido>=0.2.1",
    "pillow>=10.0.0",
]
dashboard = [
    "plotly>=5.18.0",
]
full = [
    "folium>=0.15.0",
    "geopandas>=0.14.0",
    "scipy>=1.10.0",
    "seaborn>=0.13.0",
    "networkx>=3.0",
    "pyvis>=0.3.0",
    "kaleido>=0.2.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/teyfikoz/VizForge"
Repository = "https://github.com/teyfikoz/VizForge"
Documentation = "https://github.com/teyfikoz/VizForge/docs"
Issues = "https://github.com/teyfikoz/VizForge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vizforge*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
